changes and things

--- a/miley.conf
+++ b/miley.conf
@@ -10,5 +10,5 @@ respawn
 respawn limit 5 60
 
 script
-  exec sudo /usr/local/bin/node /var/www/miley-feed/miley.js >> /var/log/miley.log 2>&1
+  exec sudo /usr/bin/env node /var/www/miley-feed/miley.js >> /var/log/miley.log 2>&1
 end script
